# akselrod

./: .gitignore  README.md  pyproject.toml
examples/: run_all_cooperate.py  run_multigame_grid.py  run_noisy_tournament.py  run_tft_vs_others.py
notebooks/: experiment_template.ipynb  noisy_grid_heatmap.ipynb
scripts/: setup_dev.sh
src/pd/: __init__.py  collector.py  deal.py  deal_generator.py  game.py  multigame.py  player.py  rng.py
src/pd/collectors/: __init__.py  score_stats.py
src/pd/deal_generators/: __init__.py  classic_axelrod.py  static.py
src/pd/players/: __init__.py  always_cooperate.py  always_defect.py  random_defect.py  random_defect_tft.py  tit_for_tat.py
tests/: test_defect_strategies.py  test_multigame.py  test_multigame_parallel.py  test_player_chaos.py  test_score_stats_collector.py  test_smoke.py  test_static_generator.py  test_tit_for_tat.py
